syntax = "proto3";

package proto;

service CustomerService {
  rpc ListPersons(RequestType) returns (stream Person) {};
  rpc AddPerson(Person) returns (ResponseType) {};	// Create
  rpc GetPerson(Person) returns (ResponseType) {};	// Read
  rpc UpdatePerson(Person) returns (ResponseType) {};	// Update
  rpc DeletePerson(Person) returns (ResponseType) {};	// Delete
}

message ResponseType {
  optional Person man = 1;
}

message RequestType {
  optional Person man = 1;
}

message Person {
  int32  id = 1;	// used as the key
  string name = 2;
  int32  age  = 3;
}
